finish ejs tutorial

--- a/basics/lesson-2/ejs-tutorial/views/about.ejs
+++ b/basics/lesson-2/ejs-tutorial/views/about.ejs
@@ -1,4 +1,5 @@
 <%- include('components/header.ejs') %>
 
-<h1>About Page</h1>
-<h3>This is brief information about our operation</h3>
+<h6>This is our about page</h6>
+
+<%- include('components/footer.ejs') %>
