--- a/basics/lesson-2/ejs-tutorial/views/components/footer.ejs
+++ b/basics/lesson-2/ejs-tutorial/views/components/footer.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Page</title>
+    <title>Footer Page</title>
 </head>
 <body>
-    <header>
-        Header section is here
-    </header>
+    <footer>
+        Footer Section is here
+    </footer>
 </body>
 </html>
