--- a/basics/lesson-2/ejs-tutorial/views/contact.ejs
+++ b/basics/lesson-2/ejs-tutorial/views/contact.ejs
@@ -1,7 +1,5 @@
 <%- include('components/header.ejs') %>
 
-<h6>Single Product</h6>
-
-<span><%= singleProduct.title %></span>
+<h6>This is our contact page</h6>
 
 <%- include('components/footer.ejs') %>
