--- a/basics/lesson-2/ejs-tutorial/views/home.ejs
+++ b/basics/lesson-2/ejs-tutorial/views/home.ejs
@@ -1,12 +1,12 @@
 <%- include('components/header.ejs') %>
 
-<h1>Welcome to homepage</h1>
-<label>List of products</label>
-
+<h3>Welcome to the home page</h3>
 <ul>
-    <% products.forEach(product => { %>
+    <% products.forEach((product) => { %>
         <li>
-           <a href="/products/<%= product.id %>"><%= product.title %></a>
+            <a href="/products/<%= product.id %>"><%= product.title %></a>
         </li>
-    <% });  %>
+    <% }) %>
 </ul>
+
+<%- include('components/footer.ejs') %>
